@@ -29,7 +29,7 @@
 include_once 'lib/config.php';
 require_once(dirname(__FILE__) . "/stdlib.php");
 require_once 'lib/Request.php';
-require_once("lib/WikiUserNew.php");
+require_once("lib/WikiUser.php");
 require_once 'lib/WikiDB.php';
 require_once 'lib/WikiPluginCached.php';
 
